# orogene

./: Cargo.toml  build.rs
.github/workflows/: release.yml
crates/nassun/: Cargo.toml
crates/nassun/src/: error.rs  package.rs  tarball.rs
crates/nassun/src/fetch/: dir.rs
crates/node-maintainer/: Cargo.toml
crates/node-maintainer/src/: graph.rs  resolver.rs
crates/oro-client/: Cargo.toml
crates/oro-client/src/: auth_middleware.rs  client.rs  error.rs
crates/oro-common/: Cargo.toml
crates/oro-common/src/: manifest.rs
crates/oro-config/: Cargo.toml
crates/oro-npm-account/: Cargo.toml
crates/oro-package-spec/: Cargo.toml
crates/oro-pretty-json/: Cargo.toml
crates/oro-script/: Cargo.toml
crates/oro-shim-bin/: Cargo.toml
src/: apply_args.rs  lib.rs  main.rs
tests/snapshots/: help__add.snap  help__apply.snap  help__login.snap  help__logout.snap  help__ping.snap  help__reapply.snap  help__remove.snap  help__view.snap
