[package]
name = "orogene"
version = "0.3.35-elide"
description = "`node_modules/` package manager and utility toolkit."
readme = "README.md"
build = "build.rs"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[package.metadata.release]
tag = true

[package.metadata.wix]
upgrade-guid = "C5FC7FE8-A6AB-4897-8B26-01220D1C3FAD"
path-guid = "D7A7057F-9CE2-4FB0-A0CF-1293469361C5"

[dependencies]
# Workspace Deps
nassun = { version = "=0.3.35-elide", path = "./crates/nassun" }
node-maintainer = { version = "=0.3.35-elide", path = "./crates/node-maintainer" }
oro-client = { version = "=0.3.35-elide", path = "./crates/oro-client" }
oro-common = { version = "=0.3.35-elide", path = "./crates/oro-common" }
oro-config = { version = "=0.3.35-elide", path = "./crates/oro-config" }
oro-npm-account = { version = "=0.3.35-elide", path = "./crates/oro-npm-account" }
oro-package-spec = { version = "=0.3.35-elide", path = "./crates/oro-package-spec" }
oro-pretty-json = { version = "=0.3.35-elide", path = "./crates/oro-pretty-json" }

# Regular deps
async-std = { workspace = true, features = [
    "attributes",
    "tokio1",
    "unstable",
] }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-humanize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
dialoguer = { workspace = true, default-features = false }
directories = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
is_ci = { workspace = true }
is-terminal = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
rand = { workspace = true, default_features = false }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-unicode = { workspace = true }
term_grid = { workspace = true }
term_size = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[workspace]
members = [".", "crates/*"]

[workspace.package]
authors = ["Orogene Maintainers and Contributors"]
edition = "2021"
repository = "https://github.com/orogene/orogene"
homepage = "https://orogene.dev"
rust-version = "1.67.1"

[workspace.dependencies]
anyhow = "1.0.80"
async-compression = "0.4.6"
async-process = "2.2.3"
async-std = "1.12.0"
async-trait = "0.1.80"
backon = "0.4.4"
base64 = "0.22.1"
bincode = "1.3.3"
bytecount = "0.6.8"
cacache = { version = "13.0.0", default-features = false, features = ["mmap", "tokio-runtime"] }
chrono = "0.4.31"
chrono-humanize = "0.2.3"
clap = "4.5.3"
colored = "2.1.0"
config = { version = "0.14.0", default-features = false }
console_error_panic_hook = "0.1.7"
darling = "0.20.9"
dashmap = "6.0.1"
derive_builder = "0.20.0"
dialoguer = { version = "0.10.4", default-features = false }  # needs attention
directories = "5.0.1"
dunce = "1.0.4"
flate2 = { version = "1.0.28", default-features = false }
futures = "0.3.30"
http = "1.1.0"
indexmap = "2.2.6"
indicatif = "0.17.7"
io_tee = "0.1.1"
is-terminal = "0.4.12"
is_ci = "1.1.1"
http-cache-reqwest = "0.14.0"
humansize = "1.1.0"  # needs attention
insta = "1.39.0"
js-sys = "0.3.69"
junction = "1.1.0"
#kdl = { git = "https://github.com/elide-tools/kdl-rs.git", rev = "b76df4f16ce805798e6d513a6daedf97f6d28e5d" }
kdl = { git = "https://github.com/elide-tools/kdl-rs.git", rev = "6044ef9776f24f45004c36d7628b1f5fbd83c8ad" }
maplit = "1.0.2"
miette = "5.8.0"  # needs attention
mockito = "1.4.0"
node-semver = "2.1.0"
nom = "7.1.3"
once_cell = "1.19.0"
open = "5.1.4"
pathdiff = "0.2.1"
percent-encoding = "2.3.1"
petgraph = { version = "0.6.5", default-features = false }
poloto = "19.1.2"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rand = { version = "0.8.5", default-features = false }
reflink-copy = "0.1.18"
regex = "1.10.5"
reqwest = { version = "0.12.3" }
reqwest-middleware = "0.3.0"
resvg = "0.29.0"  # needs attention
rkyv = { version = "0.7.44", features = ["validation"] }
sentry = "0.34.0"
serde = "1.0.203"
serde_json = "1.0.118"
serde-wasm-bindgen = "0.6.5"
ssri = "9.2.0"
supports-unicode = "3.0.0"
syn = "2.0.68"
tar = "0.4.41"
task-local-extensions = "0.1.4"
tempfile = "3.10.1"
term_grid = "0.2.0"
term_size = "0.3.2"
test-case = "3.3.1"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"
tsify = { version = "0.4.5", default-features = false }
unicase = "2.7.0"
url = "2.5.2"
walkdir = "2.5.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-streams = "0.4.0"
which = "6.0.1"
wiremock = "0.6.0"
reqwest-retry = "0.6.0"

# [patch.crates-io]
# cacache = { path = "../cacache-rs" }
# reflink-copy = { path = "../reflink-copy" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.72.1"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["msi"]

[build-dependencies]
embed-resource = "1.3.3"

[[bin]]
name = "oro"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
opt-level = 3
strip = true
debug = true
incremental = false
codegen-units = 1
split-debuginfo = "unpacked"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[dev-dependencies]
backon = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
poloto = { workspace = true }
resvg = { workspace = true }
tempfile = { workspace = true }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

